fixed alignment of shop buttons

--- a/Project/styles.css
+++ b/Project/styles.css
@@ -774,13 +774,12 @@ form .box:focus {
   bottom: clamp(10px, 4vw, 30px);
   right: clamp(10px, 4vw, 30px);
   z-index: 100;
-  font-size: clamp(1rem, 2.5vw, 1.5rem);
   border: none;
   outline: none;
   background-color: var(--border-color);
   color: var(--text-color-1);
   cursor: pointer;
-  padding: clamp(10px, 3vw, 20px);
+  padding: clamp(11px, 3vw, 18px);
   border-radius: clamp(4px, 1vw, 8px);
   opacity: 0;
   transform: translateY(20px);
@@ -800,12 +799,11 @@ form .box:focus {
   transform: scale(1.05);
 }
 .top-button-image {
-  width: clamp(20px, 5vw, 40px);
+  width: clamp(15px, 5vw, 30px);
   height: auto;
   display: block;
   object-fit: contain;
-  fill: var(--gradient-background-1);
-    transition: transform 0.4s ease;
+  transition: transform 0.4s ease;
 }
 #myBtn:hover .top-button-image {
   transform: scale(1.1);
@@ -1043,7 +1041,14 @@ background-image: url(https://i.pinimg.com/736x/b2/60/94/b26094970505bcd59c2e5fe
 }
 
 /* Buy Button */
+.button-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
 .buy-button {
+  display: inline-block;
   font-size: clamp(1rem, 2.5vw, 1.3rem);
   font-weight: bold;
   padding: 0.9rem 1.5rem;
